appId: com.duckduckgo.mobile.android
---
- launchApp:
    clearState: true
    stopApp: true
- assertVisible: "The Internet can be kinda creepy.\n\nNot to worry! Searching and\
    \ browsing privately is easier than you think."
- tapOn: "Let's Do It!"
- tapOn: "Cancel"